--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loggedIn(); else notLoggedIn" class="info">
+<div *ngIf="loggedIn(); else notLoggedIn" class="info mat-app-background">
   <mat-icon id="infoIcon">info_outline</mat-icon>
   Just click the plus icon and add your policy idea!
 </div>
