--- a/src/material.scss
+++ b/src/material.scss
@@ -1,10 +1,41 @@
+/*@use '~@angular/material' as mat;
+
 @import '~@angular/material/theming';
+
 @include mat-core();
+
 $my-app-primary: mat-palette($mat-blue-grey);
 $my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
 $my-app-warn:    mat-palette($mat-deep-orange);
-$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
-@include angular-material-theme($my-app-theme);
+
+$light-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $my-app-prim ary,
+      accent: $my-app-accent,
+      warn: $my-app-warn,
+    ),
+  )
+);
+
+$dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $my-app-primary,
+      accent: $my-app-accent,
+      warn: $my-app-warn,
+    ),
+  )
+);
+
+.darkMode {
+  @include mat.all-component-colors($dark-theme);
+}
+
+
+@include mat.all-component-themes($my-app-theme);
+
+
 .alternate-theme {
   $alternate-primary: mat-palette($mat-light-blue);
   $alternate-accent:  mat-palette($mat-yellow, 400);
